2012-06-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\txiescapepdf): check \pdfescapestring
	against \thisisundefined, not \relax.  Of course.
	Bug report from Marco Maggi, 05 Jun 2012 12:07:02.

2012-05-27  Patrice Dumas  <pertusus@free.fr>

	* README: remove the reference to the removed INTRODUCTION file.

2012-05-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Inserting a Backslash): use @backslashchar{}
	in the example, not @comma{}.
	Report from Werner, 24 May 2012 12:56:58.

2012-05-22  Karl Berry  <karl@gnu.org>

	* README: updates for texi2any.
	
	* INTRODUCTION: remove; seems unnecessary with all else now.
	* Makefile.am (EXTRA_DIST): remove it.

2012-05-17  Patrice Dumas  <pertusus@free.fr>

	* doc/Makefile.am (TXI_XLATE): correct txi-nl.tex name that was
	wrongly set to tex-nl.tex.

2012-05-16  Andreas Schwab  <schwab@linux-m68k.org>

	* doc/texinfo.tex (\skipspaces): Remove reference to undefined
	macro \p.

2012-05-15  Werner Lemberg  <wl@gnu.org>

	* doc/txi-hu.tex: Hungarian translation for texinfo.tex.
	Taken from LilyPond documentation.

	* doc/Makefile.am (TXI_XLATE): add txi-hu.tex.

	* NEWS: Mention it.

2012-04-24  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (TXI_XLATE): add txi-nn.tex.

	* doc/refcard/txirefcard.tex: node pointers are optional.

	* doc/texinfo.txi (Node Line Requirements): don't use the non-word
	"nodename".  Internal whitespace is collapsed.
	
	* doc/texinfo.txi (#line and TeX, Use TeX, Obtaining TeX,
	Preparing for TeX, Debugging with TeX): use @TeX{} in node names
	and thus simplify cross references.  Does not change Info node names,
	hence no need to leave @anchors behind.
	
	* doc/texinfo.txi: update master menu.

2012-04-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Formats): add PostScript item.
	(Invoking texi2any): add options passed to texi2dvi.
	(texi2any Printed Output): new node.
	(Format with texi2dvi): mention --ps and --dvipdf.

2012-04-22  Karl Berry  <karl@gnu.org>
