@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.16 2010-06-24 00:17:01 karl Exp $
+# $Id: Makefile.am,v 1.17 2012-06-11 17:54:26 karl Exp $
 # Makefile.am for texinfo/info.
 #
 # Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
@@ -29,9 +29,8 @@ AM_CPPFLAGS = 					\
   -DINFODIR=\"$(infodir)\"			\
   -DINFODIR2=\"$(infodir2)\"
 
-LDADD = ../lib/libtxi.a $(top_builddir)/gnulib/lib/libgnu.a \
-        $(TERMLIBS) $(LIBINTL)
-infokey_LDADD = ../lib/libtxi.a $(top_builddir)/gnulib/lib/libgnu.a $(LIBINTL)
+LDADD = $(top_builddir)/gnulib/lib/libgnu.a $(TERMLIBS) $(LIBINTL)
+infokey_LDADD = $(top_builddir)/gnulib/lib/libgnu.a $(LIBINTL)
 
 EXTRA_DIST = README pcterm.c
 
