@@ -1,13 +1,0 @@
-$Id: README,v 1.4 2011-10-14 16:02:06 karl Exp $
-texinfo/lib/README
-
-  Copyright (C) 2002, 2011 Free Software Foundation, Inc.
-
-  Copying and distribution of this file, with or without modification,
-  are permitted in any medium without royalty provided the copyright
-  notice and this notice are preserved.
-
-Common routines for the Texinfo programs -- down to one.
-
-The bulk of the common sources come from Gnulib:
-http://savannah.gnu.org/projects/gnulib
